feat: Completes handler
